# internal/types/users.go
@@ -1,0 +1,19 @@
+package types
+
+type SignUpInput struct {
+	Name     string `json:"name" binding:"required"`
+	Password string `json:"password" binding:"required"`
+	Email    string `json:"email" binding:"required,email"`
+}
+
+type SignInInput struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
+
+type User struct {
+	ID           int    `json:"id" db:"id"`
+	Name         string `json:"name" db:"name"`
+	Email        string `json:"email" db:"email"`
+	PasswordHash string `json:"password_hash" db:"password_hash"`
+}
